--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=bookreviews_application
+spring.config.import=optional:file:.env[.properties]
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/bookreviews
+spring.datasource.username=${MYSQLDB_USER}
+spring.datasource.password=${MYSQLDB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
